# Feat

./: .gitignore  1710.feat  310.feat  3103.feat  310feat.ft  410.feat  README.md  config.toml  feedbackpunten.toml  pyproject.toml  students_A-test.csv  test-student.txt  test.toml  test.toml.bak  test123.feat  test2-studenten copy.txt  test2-studenten.txt  test3101.toml  test3102.toml  test_oud.toml  testsave.toml  testsave2.toml  testsave3.toml  teststudenten.txt  testtest.toml
src/feat/: __init__.py  gui.py
src/feat/models/: configuration.py
src/feat/views/: gui.py  gui_feat.ui  gui_feat_dialog.ui  gui_feat_new_file.ui  gui_feat_test.ui
tests/: test_feat.py
