[tool.poetry]
name = "Feat"
version = "0.2.0"
description = ""
authors = ["AnneliesVlaar <66774020+AnneliesVlaar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyqtgraph = "^0.12.3"
pandas = "^1.3.5"
toml = "^0.10.2"
pyqt6 = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'ft.' = 'feat.views.gui:main'
